2011-05-25  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* dispextern.h (struct glyph_row): New member fringe_bitmap_periodic_p.

	* dispnew.c (shift_glyph_matrix, scrolling_window): Mark scrolled row
	for fringe update if it has periodic bitmap.
	(row_equal_p): Also compare left_fringe_offset,	right_fringe_offset,
	and fringe_bitmap_periodic_p.

	* fringe.c (get_fringe_bitmap_data): New function.
	(draw_fringe_bitmap_1, update_window_fringes): Use it.
	(update_window_fringes): Record periodicity of fringe bitmap in glyph
	row.  Mark glyph row for fringe update if periodicity changed.

	* xdisp.c (try_window_reusing_current_matrix): Don't mark scrolled row
	for fringe update unless it has periodic bitmap.

2011-05-25  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (get_next_display_element): Set correct it->face_id for
	a static composition.

2011-05-24  Leo Liu  <sdl.web@gmail.com>

	* deps.mk (fns.o):
	* makefile.w32-in ($(BLD)/fns.$(O)): Include sha1.h.

	* fns.c (crypto_hash_function, Fsha1): New function.
	(Fmd5): Use crypto_hash_function.
	(syms_of_fns): Add Ssha1.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* gnutls.c: Remove unused macros.
	(fn_gnutls_transport_set_lowat, fn_gnutls_transport_set_pull_function):
	(fn_gnutls_transport_set_push_function) [!WINDOWSNT]:
	Remove macros that are defined and never used.
	Caught by gcc -Wunused-macros (GCC 4.6.0, Fedora 14).

2011-05-22  Chong Yidong  <cyd@stupidchicken.com>

	* xselect.c (syms_of_xselect): Remove unused symbol SAVE_TARGETS.
	(Fx_get_selection_internal): Minor cleanup.
	(Fx_own_selection_internal): Rename arguments for consistency with
	select.el.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* xselect.c (QSAVE_TARGETS): New static var, to fix build failure.

2011-05-22  Chong Yidong  <cyd@stupidchicken.com>

	* xselect.c (syms_of_xselect): Include character.h; use DEFSYM.

2011-05-21  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
